[package]
name = "flasher-server"
authors = ["Mora Unie Youer <mora_unie_youer@riseup.net>", "MicrochipQ <microchipq@gmail.com>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/mora-unie-youer/flasher-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
