[package]
name = "flasher-server"
authors = ["Mora Unie Youer <mora_unie_youer@riseup.net>", "MicrochipQ <microchipq@gmail.com>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/mora-unie-youer/flasher-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
sea-orm = { version = "0.6.0", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
